send mail deploy